<resources>
    <string name="app_name" translatable="false">Go-There</string>

    <string name="brand_headline" translatable="false">Go-There</string>
    <string name="hero_image_content_description">Hero image</string>
    <string name="slogan_subtitle">Find the best place to spend your time!</string>

    <string name="join_us_signUp_screen_headline">Join Us</string>
    <string name="introduce_yourself_signUp_screen_subtitle">Introduce yourself</string>

    <string name="welcome_widget_title">Welcome</string>
    <string name="personal_information_widget_title">Personal information</string>
    <string name="identity_information_widget_title">Identity information</string>
    <string name="security_information_widget_title">Security information</string>

    <string name="name_textField_hint">Name</string>
    <string name="surname_textField_hint">Surname</string>
    <string name="username_textField_hint">Username</string>
    <string name="email_textField_hint">Email</string>
    <string name="password_textField_hint">Password</string>
    <string name="password_textField_helper">\"Password\" must be at least 8 chars long.</string>
    <string name="confirm_password_textField_hint">Confirm Password</string>

    <string name="signUp_button">Sign up</string>
    <string name="login_button">Log in</string>
    <string name="terms_and_conditions_dialog_decline_button">Decline</string>
    <string name="terms_and_conditions_dialog_accept_button">Accept</string>
    <string name="back_button">Back</string>
    <string name="terms_and_conditions_button">Terms and Conditions</string>
    <string name="checkbox_terms_conditions_accept">I accept the</string>

    <string name="terms_and_conditions_dialog_title">Terms and Conditions</string>
    <string name="terms_and_conditions_full">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>

    <string name="login_error_wrong_credentials">Wrong \"Username\" or \"Password\".</string>
    <string name="signUp_error_username_taken">The \"Username\" is already taken.</string>
    <string name="signUp_error_email_taken">The \"Email\" is already taken.</string>
    <string name="error_email_format">The \"Email\" is not in the right format.</string>
    <string name="signUp_error_short_password">\"Password\" is shorter than needed.</string>
    <string name="signUp_error_passwords_do_not_match">Passwords don\'t match.</string>
    <string name="signUp_error_must_accept_terms_conditions">You must accept \"Terms and Conditions\".</string>
    <string name="uncategorized_error">[DEV] - An uncategorized error occurred!</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="business">Business</string>
    <string name="visit">Visit</string>
    <string name="log_out">Log out</string>
    <string name="under_development">Under development</string>
    <string name="search_venues">Search venues</string>
    <string name="search_business">Search your businesses</string>
    <string name="create_business">Create</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="short_description">Short Description</string>
    <string name="venue_username">Venue Username</string>
    <string name="biography">Biography</string>
    <string name="profile_image">Profile Image</string>
    <string name="upload">Upload</string>
    <string name="cover_image">Cover Image</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="firststep">#FirstStep</string>
</resources>