<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/GT_compBase"
    tools:context=".features.root_prelog.welcome.branch_welcome.ui.WelcomeFragment">

    <com.sep.gothere.component.dynamic.impl.layout.GTLayoutHeader
        android:id="@+id/heroLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/welcomeFragmentContentLayout_FITS_BOTTOM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcomeFragmentHeroLayout_FITS_TOP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/screenSpacingSys"
            android:layout_marginTop="@dimen/headLineSpacingSys"
            android:layout_marginEnd="@dimen/screenSpacingSys"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/spacingMaxWidth">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/brand_headline"
                android:textAppearance="@style/GT_Typography.ExtraBold.Large.Headline"
                android:textColor="?attr/GT_basicHcPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/heroImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/itemSpacingSys"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hero_image_content_description"
                android:src="@drawable/welcome_hero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.sep.gothere.component.dynamic.impl.layout.GTLayoutHeader>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeFragmentContentLayout_FITS_BOTTOM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="@dimen/screenSpacingSys"
        android:paddingTop="@dimen/sectionSpacingSys"
        android:paddingEnd="@dimen/screenSpacingSys"
        android:paddingBottom="@dimen/spacingScreenBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heroLayout"
        app:layout_constraintWidth_max="@dimen/spacingMaxWidth">

        <TextView
            android:id="@+id/sloganLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sectionSpacingSys"
            android:layout_marginEnd="@dimen/sectionSpacingSys"
            android:layout_marginBottom="@dimen/sectionSpacingSys"
            android:text="@string/slogan_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/GT_Typography.SemiBold.Large.Subtitle"
            android:textColor="?attr/GT_basicHcPrimary"
            app:layout_constraintBottom_toTopOf="@id/welcomeCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/welcomeCard"
            style="@style/GT_Card.Surface.NoSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/sectionSpacingSys">

                <LinearLayout
                    android:id="@+id/welcomeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/GT_compLayerPrimary"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/sectionSpacingSys"
                    android:paddingTop="@dimen/itemSpacingSys"
                    android:paddingEnd="@dimen/sectionSpacingSys"
                    android:paddingBottom="@dimen/itemSpacingSys">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_widget_title"
                        android:textAlignment="center"
                        android:textAppearance="@style/GT_Typography.Bold.Title"
                        android:textColor="?attr/GT_basicHcPrimary" />

                </LinearLayout>

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/loginProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:trackCornerRadius="2dp"
                    app:trackThickness="@dimen/spacing3XS" />

                <com.sep.gothere.component.dynamic.impl.input.text.GTTextInputLayout
                    android:id="@+id/usernameInputLayout"
                    style="@style/GT_LayoutTextInput.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sectionSpacingSys"
                    android:layout_marginTop="@dimen/itemSpacingSys"
                    android:layout_marginEnd="@dimen/sectionSpacingSys"
                    android:hint="@string/username_textField_hint"
                    app:endIconMode="clear_text"
                    app:prefixText="\@">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameEditText"
                        style="@style/GT_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.sep.gothere.component.dynamic.impl.input.text.GTTextInputLayout>

                <com.sep.gothere.component.dynamic.impl.input.text.GTTextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/GT_LayoutTextInput.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sectionSpacingSys"
                    android:layout_marginTop="@dimen/itemSpacingSys"
                    android:layout_marginEnd="@dimen/sectionSpacingSys"
                    android:hint="@string/password_textField_hint"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        style="@style/GT_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.sep.gothere.component.dynamic.impl.input.text.GTTextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sectionSpacingSys"
                    android:layout_marginTop="@dimen/sectionSpacingSys"
                    android:layout_marginEnd="@dimen/sectionSpacingSys">

                    <com.sep.gothere.component.dynamic.impl.button.GTButtonGray
                        android:id="@+id/signUpButton"
                        style="@style/GT_Button.Default"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing1XL"
                        android:layout_marginEnd="@dimen/sectionSpacingSys"
                        android:layout_weight="1"
                        android:text="@string/signUp_button" />

                    <com.sep.gothere.component.dynamic.impl.button.GTButtonFilled
                        android:id="@+id/loginButton"
                        style="@style/GT_Button.Default"
                        android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/sectionSpacingSys"
                        android:layout_weight="1"
                        android:text="@string/login_button" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>