<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/GT_compBase"
    tools:context=".features.root_postlog.business.branch_business.ui.BusinessFragment">

    <com.sep.gothere.component.dynamic.impl.layout.GTLayoutAccentHeader
        android:id="@+id/heroLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/accent_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/searchFragmentHeroLayout_FITS_TOP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/screenSpacingSys"
            android:paddingTop="@dimen/headLineSpacingSys"
            android:paddingEnd="@dimen/screenSpacingSys"
            android:paddingBottom="@dimen/sectionSpacingSys"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/spacingMaxWidth">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/itemSpacingSys"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/business"
                    android:textAppearance="@style/GT_Typography.ExtraBold.Headline"
                    android:textColor="?attr/GT_basicHcPrimary" />

                <com.sep.gothere.component.dynamic.impl.button.GTButtonGray
                    android:id="@+id/createBusinessButton"
                    style="@style/GT_Button.Default"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/itemSpacingSys"
                    android:layout_marginEnd="@dimen/itemSpacingSys"
                    android:text="@string/create_business"
                    app:icon="@drawable/location_add_icon_svg" />

                <com.sep.gothere.component.dynamic.impl.button.GTButtonGray
                    android:id="@+id/filterButton"
                    style="@style/GT_Button.Circle"
                    android:layout_width="wrap_content"
                    app:icon="@drawable/filter_icon_svg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.sep.gothere.component.dynamic.impl.input.text.GTTextInputLayout
                    android:id="@+id/searchFieldInputLayout"
                    style="@style/GT_LayoutTextInput.Filled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/search_icon_small_svg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchFieldEditText"
                        style="@style/GT_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_business"
                        android:inputType="text" />

                </com.sep.gothere.component.dynamic.impl.input.text.GTTextInputLayout>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/searchFieldPB"
                    android:layout_width="@dimen/spacingMedium"
                    android:layout_height="@dimen/spacingMedium"
                    android:layout_marginStart="@dimen/itemSpacingSys"
                    android:layout_marginTop="@dimen/spacing1XS"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:trackCornerRadius="2dp"
                    app:trackThickness="@dimen/spacing3XS" />

            </LinearLayout>

        </LinearLayout>

    </com.sep.gothere.component.dynamic.impl.layout.GTLayoutAccentHeader>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_FITS_BOTTOM"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/screenSpacingSys"
        android:paddingEnd="@dimen/screenSpacingSys"
        android:paddingBottom="@dimen/spacing3_5XL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heroLayout"
        app:layout_constraintWidth_max="@dimen/spacingMaxWidth" />

    <FrameLayout
        android:id="@+id/createButton_FITS_BOTTOM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing4XL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>