<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/GT_compBase"
    tools:context=".base.BaseActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navbarContainer_FITS_BOTTOM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacingScreenBottom"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/navbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing1XS"
            android:layout_marginEnd="@dimen/spacing1XS"
            android:clipChildren="true"
            app:cardElevation="@dimen/spacing2XS"
            app:cardBackgroundColor="?GT_basicTransparent"
            app:cardCornerRadius="@dimen/spacing1XS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="?GT_compStroke">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.sep.gothere.component.static.GTGlassSurface
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="0.02"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/noise_tile"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="@dimen/spacing3XS"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/exploreNavButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:soundEffectsEnabled="false"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing2XS">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacingSmall"
                            android:layout_marginBottom="@dimen/spacing3XS"
                            android:adjustViewBounds="true"
                            android:src="@drawable/explore_icon_svg"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/explore"
                            android:textAlignment="center"
                            android:textAppearance="@style/GT_Typography.Regular.Caption"
                            android:textColor="?GT_basicHcPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/search_nav_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:soundEffectsEnabled="false"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing2XS">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacingSmall"
                            android:layout_marginBottom="@dimen/spacing3XS"
                            android:adjustViewBounds="true"
                            android:src="@drawable/search_icon_svg"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/search"
                            android:textAlignment="center"
                            android:textAppearance="@style/GT_Typography.Regular.Caption"
                            android:textColor="?GT_basicHcPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileNavButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:soundEffectsEnabled="false"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing2XS">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacingSmall"
                            android:layout_marginBottom="@dimen/spacing3XS"
                            android:adjustViewBounds="true"
                            android:src="@drawable/profile_icon_svg"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile"
                            android:textAlignment="center"
                            android:textAppearance="@style/GT_Typography.Regular.Caption"
                            android:textColor="?GT_basicHcPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/businessNavButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:soundEffectsEnabled="false"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing2XS">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacingSmall"
                            android:layout_marginBottom="@dimen/spacing3XS"
                            android:adjustViewBounds="true"
                            android:src="@drawable/business_icon_svg"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/business"
                            android:textAlignment="center"
                            android:textAppearance="@style/GT_Typography.Regular.Caption"
                            android:textColor="?GT_basicHcPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>